--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -21,69 +21,69 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-white">
-            <div class="container">
-                <div class="row w-100">
-                    <div class="col-auto">
-                        <ul class="navbar-nav flex-row">
-                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyBlog</a>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://lfost42-portfolio.netlify.app/">AboutMe</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
-                            </li>
-                            @if (User.IsInRole("Owner"))
-                            {
+        <div class="scroll_div">
+            <nav class="navbar navbar-expand-sm navbar-light bg-white">
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div class="col-auto">
+                            <ul class="navbar-nav flex-row">
+                                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyBlog</a>
                                 <li class="nav-item">
-                                    <a class="nav-link owner" asp-area="" asp-controller="Series" asp-action="Index">Series</a>
+                                    <a class="nav-link" href="https://lfost42-portfolio.netlify.app/">AboutMe</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link owner" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                                 </li>
-                            }
+                                @if (User.IsInRole("Owner"))
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link owner" asp-area="" asp-controller="Series" asp-action="Index">Series</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link owner" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
+                                    </li>
+                                }
 
-                        </ul>
+                            </ul>
+                        </div>
+
+                        <div class="col d-flex justify-content-xs-start justify-content-sm-start justify-content-md-end justify-content-lg-end">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <partial name="_LoginPartial" />
+                                </li>
+                            </ul>
+                        </div>
                     </div>
+                </div>
+            </nav>
 
-                    <div class="col d-flex justify-content-xs-start justify-content-sm-start justify-content-md-start justify-content-lg-end">
-                        <ul class="navbar-nav">
+            <nav class="navbar navbar-light border-top border-bottom">
+                <div class="container">
+                    <div class="navbar-expand-sm d-sm-inline-flex justify-content-start">
+                        <ul class="navbar-nav flex-row small author">
                             <li class="nav-item">
-                                <partial name="_LoginPartial" />
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATA</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">LAYOUTS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="5">PROJECTS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="6">TOOLS</a>
+                            </li>
+                            <hr />
                         </ul>
                     </div>
                 </div>
-            </div>
-        </nav>
-
-
-        <nav class="navbar navbar-light navbar-expand-sm mb-2 border-top border-bottom">
-            <div class="container">
-                <div class="scroll_div d-sm-inline-flex justify-content-start">
-                    <ul class="navbar-nav flex-row small author">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATA</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">LAYOUTS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="5">PROJECTS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="6">TOOLS</a>
-                        </li>
-                        <hr />
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+            </nav>
+        </div>
 
     </header>
     <div class="container pb-5">
