--- a/BlogUI/wwwroot/css/site.css
+++ b/BlogUI/wwwroot/css/site.css
@@ -107,38 +107,6 @@ body {
         transition: none;
     }
 
-/* Navigation Styles */
-#header nav.navbar div.container div.row {
-    margin-bottom: 0px;
-}
-
-nav.navbar {
-    margin-bottom: -2em;
-}
-ul.navbar-nav li.nav-item a.owner {
-    padding: 3px;
-    border: 1px solid red;
-    margin: 0;
-    text-decoration: none;
-}
-
-a.nav-link:hover {
-    background-color: #f5fcfc;
-    border-bottom: dotted 1px #2ebaae;
-    text-decoration: none;
-}
-
-div.scroll_div {
-    width: 350px;
-    Overflow-x: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
-.scroll_div::-webkit-scrollbar {
-    display: none;
-}
-
 /* Type */
 
 body, input, select, textarea {
@@ -3742,4 +3710,40 @@ div a.card, div div.card {
 
 .page-link {
     padding: 0.375rem 0.75rem;
+}
+
+/*nav scroll_div*/
+
+div.scroll_div {
+    width: 650px;
+    Overflow-x: auto;
+    overflow-y: visible;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.scroll_div::-webkit-scrollbar {
+    display: none;
+}
+
+/* Navigation Styles */
+#header nav.navbar div.container div.row {
+/*    margin-bottom: 0px;*/
+}
+
+nav.navbar {
+    /*    margin-bottom: 0;*/
+}
+
+ul.navbar-nav li.nav-item a.owner {
+    padding: 3px;
+    border: 1px solid red;
+    margin: 0;
+    text-decoration: none;
+}
+
+a.nav-link:hover {
+    background-color: #f5fcfc;
+    border-bottom: dotted 1px #2ebaae;
+    text-decoration: none;
 }
