--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -21,12 +21,11 @@
 </head>
 <body>
     <header>
-        <div class="scroll_div">
             <nav class="navbar navbar-expand-sm navbar-light bg-white">
                 <div class="container">
-                    <div class="row row-cols-1 row-cols-md-2">
+                    <div class="row">
                         <div class="col-auto">
-                            <ul class="navbar-nav flex-row">
+                            <ul class="navbar-nav">
                                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyBlog</a>
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://lfost42-portfolio.netlify.app/">AboutMe</a>
@@ -60,7 +59,7 @@
 
             <nav class="navbar navbar-light border-top border-bottom">
                 <div class="container">
-                    <div class="navbar-expand-sm d-sm-inline-flex justify-content-start">
+                    <div class="navbar-expand-sm">
                         <ul class="navbar-nav flex-row small author">
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
@@ -83,7 +82,6 @@
                     </div>
                 </div>
             </nav>
-        </div>
 
     </header>
     <div class="container pb-5">
