--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -21,48 +21,52 @@
 </head>
 <body>
     <header>
-            <nav class="navbar navbar-expand-sm navbar-light bg-white">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-auto">
-                            <ul class="navbar-nav">
+        <nav class="navbar navbar-expand-sm navbar-light bg-white">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-auto">
+                        <div class="row">
+                            <div class="col-auto">
                                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyBlog</a>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="https://lfost42-portfolio.netlify.app/">AboutMe</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
-                                </li>
-                                @if (User.IsInRole("Owner"))
-                                {
-                                    <li class="nav-item">
-                                        <a class="nav-link owner" asp-area="" asp-controller="Series" asp-action="Index">Series</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link owner" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
-                                    </li>
-                                }
-
-                            </ul>
-                        </div>
-
-                        <div class="col d-flex justify-content-xs-start justify-content-sm-start justify-content-md-end justify-content-lg-end">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <partial name="_LoginPartial" />
-                                </li>
-                            </ul>
+                            </div>
+                            <div class="col">
+                                <partial name="_LoginPartial" />
+                            </div>
                         </div>
                     </div>
-                </div>
-            </nav>
+                    <div class="col">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://lfost42-portfolio.netlify.app/">AboutMe</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                            </li>
+                            @if (User.IsInRole("Owner"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link owner" asp-area="" asp-controller="Series" asp-action="Index">Series</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link owner" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
+                                </li>
+                            }
 
-            <nav class="navbar navbar-light border-top border-bottom">
+                        </ul>
+                    </div>
+
+
+                </div>
+            </div>
+        </nav>
+
+            <nav class="navbar navbar-light bg-white border-top border-bottom">
                 <div class="container">
                     <div class="navbar-expand-sm">
                         <ul class="navbar-nav flex-row small author">
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
+                                <a class="nav-link topic" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
                             </li>
 
                             <li class="nav-item">
