--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -21,9 +21,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-white">
+        <nav class="navbar navbar-expand navbar-light bg-white">
             <div class="container">
-
                 <div class="row">
                     <div class="col-auto">
                         <div class="row">
@@ -31,7 +30,7 @@
                                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyBlog</a>
                             </div>
                             <div class="col">
-                                <partial name="_LoginPartial" />
+                                <@partial name="_LoginPartial" />
                             </div>
                         </div>
                     </div>
