--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MyBlog</title>
 
+    @section metatags {
+        <meta name='MyBlog' content="" />
+        <meta name="Articles and tutorials by Lynda Foster. " content="" />
+        <meta name="title" property="og:title" content="MyBlog by Lynda Foster" />
+        <meta name="image" property="og:image" content="/images/app.png" alt="MyBlog banner" />
+    }
+
     <!--bootstrap cdn-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
