adjusted page titles and meta tags

--- a/BlogUI/Views/Articles/ArticleIndex.cshtml
+++ b/BlogUI/Views/Articles/ArticleIndex.cshtml
@@ -14,9 +14,8 @@
 
 @foreach (var item in Model.Take(1))
 {
-    <h3>@item.SeriesModel.Title</h3>
+    <h3>@item.SeriesModel.Title Articles</h3> 
 }
-
 
 
 @if (User.IsInRole("Owner"))
