--- a/BlogUI/Views/Articles/SearchIndex.cshtml
+++ b/BlogUI/Views/Articles/SearchIndex.cshtml
@@ -14,7 +14,7 @@
     ViewData["Title"] = "Search Index";
 }
 
-<h3>Search Results</h3>
+<h3>Custom Search Results</h3>
 
 <div class="row">
     @foreach (var item in Model)
