--- a/BlogUI/Views/Home/SeriesIndex.cshtml
+++ b/BlogUI/Views/Home/SeriesIndex.cshtml
@@ -7,7 +7,7 @@
 
 @model IPagedList<SeriesModel>
 
-@{ ViewData["Title"] = "Home Page"; }
+@{ ViewData["Title"] = "Series Index"; }
 
 <div class="container">
     <div class="row">
