--- a/BlogUI/Views/Home/Index.cshtml
+++ b/BlogUI/Views/Home/Index.cshtml
@@ -8,8 +8,13 @@
 @model IPagedList<ArticleModel>
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "MyBlog by Lynda Foster";
 }
+
+<meta name='MyBlog' content="" />
+<meta name="Articles and tutorials by Lynda Foster. " content="" />
+<meta name="title" property="og:title" content="MyBlog by Lynda Foster" />
+<meta name="image" property="og:image" content="/images/app.png" alt="MyBlog banner" />
 
 <div class="container">
     <div class="row">
@@ -59,15 +64,15 @@
 
 @if (Model.PageCount > 1)
 {
-<div class="row">
-    <div class="col">
-        @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
-    new PagedListRenderOptions
-    {
-        LiElementClasses = new string[] { "page-item" },
-        PageClasses = new string[] { "page-link" }
-    })
+    <div class="row">
+        <div class="col">
+            @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+        new PagedListRenderOptions
+        {
+            LiElementClasses = new string[] { "page-item" },
+            PageClasses = new string[] { "page-link" }
+        })
+        </div>
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
     </div>
-    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-</div>
 }
