--- a/BlogUI/Views/Home/SeriesIndex.cshtml
+++ b/BlogUI/Views/Home/SeriesIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@using BlogLibrary.Models
+@using BlogLibrary.Models
 @using X.PagedList
 @using X.PagedList.Mvc.Core
 @using X.PagedList.Web.Common
@@ -7,7 +7,7 @@
 
 @model IPagedList<SeriesModel>
 
-@{ ViewData["Title"] = "Series Index"; }
+@{ ViewData["Title"] = "Home Page"; }
 
 <div class="container">
     <div class="row">
@@ -16,7 +16,7 @@
         {
 <div class="col-lg-12 mx-auto mb-2">
     <div class="card p-4 h-100">
-        <a asp-controller="Series" asp-action="Details" asp-route-id="@item.Id">
+        <a asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="@item.Id">
 
             @if (item.Image != null)
             {
@@ -34,7 +34,7 @@
         {
 <div class="col-lg-6 col-md-6 mx-auto mb-2 contents-justify-start">
     <div class="card p-4 h-100">
-        <a asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="@item.Id">
+        <a asp-controller="Series" asp-action="Details" asp-route-id="@item.Id">
 
             @if (item.Image != null)
             {
