--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -3,14 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyBlog</title>
 
-    @section metatags {
-        <meta name='MyBlog' content="" />
-        <meta name="Articles and tutorials by Lynda Foster. " content="" />
-        <meta name="title" property="og:title" content="MyBlog by Lynda Foster" />
-        <meta name="image" property="og:image" content="/images/app.png" alt="MyBlog banner" />
-    }
+    <title>@ViewData["Title"] MyBlog</title>
+    <link href="~favicon.co" rel="shortcut icon icon" type="image/x-icon" />
 
     <!--bootstrap cdn-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -37,7 +32,7 @@
                                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyBlog</a>
                             </div>
                             <div class="col">
-                                <@partial name="_LoginPartial" />
+                                <partial name="_LoginPartial" />
                             </div>
                         </div>
                     </div>
