adjust view settings

--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -9,7 +9,7 @@
 @inject IImageService imageService
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = @Model.Title;
 }
 
 <div id="wrapper">
