--- a/BlogUI/Views/Articles/Index.cshtml
+++ b/BlogUI/Views/Articles/Index.cshtml
@@ -3,7 +3,7 @@
 @model IEnumerable<BlogLibrary.Models.ArticleModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Articles Index";
 }
 
 <h1>Articles Index</h1>
