--- a/BlogUI/Views/Articles/SearchIndex.cshtml
+++ b/BlogUI/Views/Articles/SearchIndex.cshtml
@@ -11,7 +11,7 @@
 @model IPagedList<ArticleModel>
 
 @{
-    ViewData["Title"] = "Search Index";
+    ViewData["Title"] = "Search Results";
 }
 
 <h3>Custom Search Results</h3>
