--- a/BlogUI/Views/Series/Index.cshtml
+++ b/BlogUI/Views/Series/Index.cshtml
@@ -3,7 +3,7 @@
 @model IEnumerable<BlogLibrary.Models.SeriesModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Series Index";
 }
 
 <h1>Series Index</h1>
