--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>@ViewData["Title"] MyBlog</title>
+    <title>@ViewData["Title"] - MyBlog</title>
     <link href="~favicon.co" rel="shortcut icon icon" type="image/x-icon" />
+    <meta name="image" property="og:image" content="~/images/app.png" alt="MyBlog banner" />
 
     <!--bootstrap cdn-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -105,38 +106,41 @@
     </div>
 
     <!-- Footer -->
-    <section id="footer">
-        <div class="row">
-            <div class="col-auto">
-                <ul class="copyright">
-                    <li>
-                        Copyright &copy;2022 | Lynda Foster<br />
-                    </li>
-                </ul>
+    <div class="container">
+        <section id="footer">
+            <div class="">
+                <div class="col-12">
+                    <ul class="copyright">
+                        Copyright &copy;2022 | Lynda Foster
+                    </ul>
+                </div>
+                <div class="col-12">
+                    <ul class="icons">
+                        <li>
+                            <a href="https://github.com/lfost42">
+                                <i class="icon brands fab fa-github fs-4"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.reddit.com/user/lynda_">
+                                <i class="icon brands fab fa-twitter fs-4"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.twitter.com/user/lfost42">
+                                <i class="icon brands fab fa-reddit-alien fs-4"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/lynda-foster/">
+                                <i class="icon brands fab fa-linkedin fs-4"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-auto justify-content-center">
-                <ul class="icons">
-                    <li><a href="https://github.com/lfost42">
-                        <i class="icon brands fab fa-github fs-4"></i></a></li>
-                    <li>
-                        <a href="https://www.reddit.com/user/lynda_">
-                            <i class="icon brands fab fa-twitter fs-4"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.twitter.com/user/lfost42">
-                            <i class="icon brands fab fa-reddit-alien fs-4"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/lynda-foster/">
-                            <i class="icon brands fab fa-linkedin fs-4"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <!-- Bootstrap core JS-->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
