--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -76,7 +76,7 @@
         <section>
             <div class="row mr-1 mt-4">
                 <div class="col-auto mb-1">
-                    <button class="button btnToggle"">@Model.Comments.Count Comment(s)</button>
+                    <button class="button btnToggle">@Model.Comments.Count Comment(s)</button>
                 </div>
 
                 @if (@Model.Tags.Count() >= 1)
@@ -158,7 +158,7 @@
                                                 <div class="col-auto mb-1">
                                                     <form asp-action="Delete" asp-controller="Comments">
                                                         @Html.Hidden("Id", comment.Id)
-                                                        @Html.Hidden("PostSlug", comment.Article.Slug)
+                                                        @Html.Hidden("articleSlug", comment.Article.Slug)
                                                         <button class="button">Delete</button>
                                                     </form>
                                                 </div>
@@ -275,13 +275,12 @@
             <div class="row">
                 @if (User.IsInRole("Owner"))
                 {
-                    <div class="col-auto">
-                        <a class="button owner" asp-controller="Articles" asp-action="Edit" asp-route-slug="@Model.Slug">Edit</a>
-                    </div>
+                    <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-slug="@Model.Slug">Edit</a><br />
                 }
-                <div class="col-auto mb-1 owner">
-                    @Html.ActionLink("Back to Home", "Index", "Home", null, new { @class = "button" })
-                </div>
+            </div>
+
+            <div class="col-auto mb-1 owner">
+                @Html.ActionLink("Back to Home", "Index", "Home", null, new { @class = "button" })
             </div>
 
         </section>
@@ -289,11 +288,9 @@
 </div>
 
 @section Scripts {
-    <script>
-        jQuery.noConflict();
+    <script>jQuery.noConflict();
         $('.btnToggle').click(function () {
             $('.comment').toggle("slow");
-        });
-    </script>
+        });</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 }
