--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -127,7 +127,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.twitter.com/user/lfost42">
+                            <a href="https://twitter.com/lfost42">
                                 <i class="icon brands fab fa-reddit-alien fs-4"></i>
                             </a>
                         </li>
