--- a/BlogUI/Views/Home/Index.cshtml
+++ b/BlogUI/Views/Home/Index.cshtml
@@ -8,12 +8,9 @@
 @model IPagedList<ArticleModel>
 
 @{
-    ViewData["Title"] = "MyBlog by Lynda Foster";
+    ViewData["Title"] = "Home";
+    ViewData["Image"] = "https://www.lfost42-blog/herokuapp.com/app.png";
 }
-
-<meta name="Articles and tutorials by Lynda Foster. " content="" />
-<meta name="title" property="og:title" content="MyBlog by Lynda Foster" />
-<meta name="image" property="og:image" content="/images/app.png" alt="MyBlog banner" />
 
 <div class="container">
     <div class="row">
