--- a/BlogUI/Views/Home/SeriesIndex.cshtml
+++ b/BlogUI/Views/Home/SeriesIndex.cshtml
@@ -7,8 +7,8 @@
 
 @model IPagedList<SeriesModel>
 
-@{ ViewData["Title"] = "Home Page"; }
-
+@{ ViewData["Title"] = "Home"; }
+@{ ViewData["Image"] = "https://www.lfost42-blog/herokuapp.com/app.png"; }
 <div class="container">
     <div class="row">
 
