--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -3,11 +3,23 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="MyBlog by Lynda Foster" />
+    <meta property="og:description" content="A knowledge base for coding and web development." />
+    <meta property="og:url" content="http://lfost42-blog.herokuapp.comyourcontent.html" />
+    <meta property="og:image" content="http://lfost42-blog.herokuapp.com/images/app.png" />
+    <meta property="og:site_name" content="MyBlog" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
+    <meta name="twitter:card" content="Coding and Web Development" />
+    <meta name="twitter:title" content="My Blog" />
+    <meta name="twitter:description" content="Coding and web development articles" />
+    <meta name="twitter:site" content="&#64;fost42" />
+    <meta name="twitter:image" content="http://lfost42-blog.herokuapp.com/images/app.png" />
+    <meta name="twitter:creator" content="&#64;lfost42" />
 
-    <title>@ViewData["Title"] - MyBlog</title>
-    <link href="~favicon.co" rel="shortcut icon icon" type="image/x-icon" />
-    <meta name="image" property="og:image" content="~/images/app.png" alt="MyBlog banner" />
+     <title>@ViewData["Title"] - MyBlog by Lynda Foster</title>
 
+    <link href="~favicon.ico" rel="shortcut icon icon" type="image/x-icon" />
     <!--bootstrap cdn-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -41,6 +53,9 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link" href="https://lfost42-portfolio.netlify.app/">AboutMe</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://github.com/lfost42/MyBlog">Code</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
@@ -122,7 +137,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.twitter.com/user/lfost42">
+                            <a href="https://www.twitter.com/lfost42">
                                 <i class="icon brands fab fa-twitter fs-4"></i>
                             </a>
                         </li>
