--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="MyBlog by Lynda Foster" />
+    <meta property="og:title" content="MyBlog" />
     <meta property="og:description" content="A knowledge base for coding and web development." />
     <meta property="og:url" content="http://lfost42-blog.herokuapp.comyourcontent.html" />
     <meta property="og:image" content="http://lfost42-blog.herokuapp.com/images/app.png" />
-    <meta property="og:site_name" content="MyBlog" />
+    <meta property="og:site_name" content="by Lynda Foster" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta name="twitter:card" content="Coding and Web Development" />
+    <meta name="twitter:card" content="A knowledge base for coding and web development." />
     <meta name="twitter:title" content="My Blog" />
     <meta name="twitter:description" content="Coding and web development articles" />
     <meta name="twitter:site" content="&#64;fost42" />
