--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="MyBlog" />
     <meta property="og:description" content="A knowledge base for coding and web development." />
-    <meta property="og:url" content="http://lfost42-blog.herokuapp.comyourcontent.html" />
+    <meta property="og:url" content="http://lfost42-blog.herokuapp.com" />
     <meta property="og:image" content="http://lfost42-blog.herokuapp.com/images/app.png" />
     <meta property="og:site_name" content="by Lynda Foster" />
     <meta property="og:locale" content="en_US" />
