--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -3,19 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <meta property="og:title" content="MyBlog" />
     <meta property="og:description" content="A knowledge base for coding and web development." />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="http://lfost42-blog.herokuapp.com" />
     <meta property="og:image" content="http://lfost42-blog.herokuapp.com/images/app.png" />
+    <meta property="og:image:alt" content="Blog Logo" />
     <meta property="og:site_name" content="by Lynda Foster" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="article" />
-    <meta name="twitter:card" content="A knowledge base for coding and web development." />
-    <meta name="twitter:title" content="My Blog" />
-    <meta name="twitter:description" content="Coding and web development articles" />
-    <meta name="twitter:site" content="&#64;fost42" />
-    <meta name="twitter:image" content="http://lfost42-blog.herokuapp.com/images/app.png" />
+    <meta name="twitter:title" content="MyBlog">
+    <meta name="twitter:description" content="A knowledge base for coding and web development.">
+    <meta name="twitter:image" content="http://lfost42-blog.herokuapp.com/images/app.png">
     <meta name="twitter:creator" content="&#64;lfost42" />
+    <meta name="twitter:card" content="summary_large_image">
 
      <title>@ViewData["Title"] - MyBlog by Lynda Foster</title>
 
