debugged edit tags

--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -12,13 +12,9 @@
     <meta property="og:image:alt" content="Blog Logo" />
     <meta property="og:site_name" content="by Lynda Foster" />
     <meta property="og:locale" content="en_US" />
-    <meta name="twitter:title" content="MyBlog">
-    <meta name="twitter:description" content="A knowledge base for coding and web development.">
-    <meta name="twitter:image" content="http://lfost42-blog.herokuapp.com/images/app.png">
-    <meta name="twitter:creator" content="&#64;lfost42" />
     <meta name="twitter:card" content="summary_large_image">
 
-     <title>@ViewData["Title"] - MyBlog by Lynda Foster</title>
+     <title>@ViewData["Title"] - MyBlog</title>
 
     <link href="~favicon.ico" rel="shortcut icon icon" type="image/x-icon" />
     <!--bootstrap cdn-->
