--- a/BlogUI/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -16,7 +16,11 @@
     else
     {
 <p>
-        Please check your email to confirm your account.
+    Please check your email to confirm your account.
+
+    You may update your avatar image by going to <a href="http://lfost42-blog.herokuapp.com/Identity/Account/Manage">
+    http://lfost42-blog.herokuapp.com/Identity/Account/Manage
+</a> after logging in. 
 </p>
     }
 }
