--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -3,18 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <meta property="og:title" content="MyBlog" />
-    <meta property="og:description" content="A knowledge base for coding and web development." />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://lfost42-blog.herokuapp.com" />
-    <meta property="og:image" content="http://lfost42-blog.herokuapp.com/images/app.png" />
-    <meta property="og:image:alt" content="Blog Logo" />
-    <meta property="og:site_name" content="by Lynda Foster" />
-    <meta property="og:locale" content="en_US" />
-    <meta name="twitter:card" content="summary_large_image">
 
-     <title>@ViewData["Title"] - MyBlog</title>
+    <title>@ViewData["Title"] - MyBlog</title>
+
+    <meta property="og:image" content="https://lfost42-blog.herokuapp.com/images/app.png" />
+    <meta property="og:image:alt" content="Blog Logo" />
+    <meta name="twitter:card" content="summary_large_image">
 
     <link href="~favicon.ico" rel="shortcut icon icon" type="image/x-icon" />
     <!--bootstrap cdn-->
