owner button property

--- a/BlogUI/Views/Articles/ArticleIndex.cshtml
+++ b/BlogUI/Views/Articles/ArticleIndex.cshtml
@@ -21,7 +21,7 @@
 @if (User.IsInRole("Owner"))
 {
     <p>
-        <a asp-action="Create" class="owner">Create New</a>
+        <a asp-action="Create" class="owner">Edit</a>
     </p>
 }
 
