--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -273,16 +273,19 @@
                 }
             </div>
             <div class="row">
-                @if (User.IsInRole("Owner"))
-                {
-                    <a class="owner" asp-action="Edit" asp-route-id="@Model.Id" asp-route-slug="@Model.Slug">Edit</a><br />
-                }
-            </div>
+                <div class="col-auto">
+                    @Html.ActionLink("Back to Home", "Index", "Home", null, new { @class = "button" })
+                </div>
 
-            <div class="col-auto mb-1 owner">
-                @Html.ActionLink("Back to Home", "Index", "Home", null, new { @class = "button" })
+                <div class="col">
+                    @if (User.IsInRole("Owner"))
+                    {
+                        <p>
+                            <a class="button owner" asp-action="Edit" asp-route-id="@Model.Id" asp-route-slug="@Model.Slug">Edit Article</a>
+                        </p>
+                    }
+                </div>
             </div>
-
         </section>
     </article>
 </div>
