--- a/BlogUI/Views/Series/Index.cshtml
+++ b/BlogUI/Views/Series/Index.cshtml
@@ -11,7 +11,7 @@
 @if (User.IsInRole("Owner"))
 {
     <p>
-        <a asp-action="Create" class="owner">Create New</a>
+        <a class="owner" asp-action="Create">Create New</a>
     </p>
 }
 
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                
+
             </th>
             <th></th>
         </tr>
@@ -50,16 +50,16 @@
                 <td>
                     @if (User.IsInRole("Owner"))
                     {
-                     <a asp-action="Edit" asp-route-id="@item.Id" class="owner">Edit</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="owner">Edit</a>
                     }
 
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a>
 
                     @if (User.IsInRole("Owner"))
                     {
-                     <a asp-action="Delete" asp-route-id="@item.Id" class="owner">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="owner">Delete</a>
                     }
-                    
+
                 </td>
             </tr>
         }
